[taotao-cloud-project-1575] update[ sentinel ]